if (LUGDULOV_MEEGO)
  install(FILES net.iksaif.lugdulov.desktop DESTINATION /usr/share/applications)
  install(FILES ../../data/icons/lugdulov.svg DESTINATION /usr/share/icons/hicolor/scalable/apps RENAME net.iksaif.lugdulov.svg)
  install(FILES lugdulov-16.png DESTINATION /usr/share/icons/hicolor/16x16/apps RENAME net.iksaif.lugdulov.png)
  install(FILES lugdulov-32.png DESTINATION /usr/share/icons/hicolor/32x32/apps RENAME net.iksaif.lugdulov.png)
  install(FILES lugdulov.png DESTINATION /usr/share/icons/hicolor/64x64/apps RENAME net.iksaif.lugdulov.png)
  install(FILES lugdulov-128.png DESTINATION /usr/share/icons/hicolor/128x128/apps RENAME net.iksaif.lugdulov.png)
else()
  install(FILES lugdulov.desktop DESTINATION share/applications)
  install(FILES lugdulov.png DESTINATION share/icons/hicolor/64x64/apps)
  install(FILES ../../data/icons/lugdulov.svg DESTINATION share/icons/hicolor/scalable/apps)
endif()
